# LFS_INSTALLER

./: CMakeLists.txt  README.md
src/: installerwindow.cpp  installerwindow.h  main.cpp
